gitops/infrastructure/capacitor/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-capacitor
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: onechart
      app.kubernetes.io/instance: capacitor
  policyTypes:
    - Ingress
  ingress:
    - {}
